# SCAROpen

./: LICENSE  readme.md
include/ringpcl/: correlation_map.h  utils.h
include/scar/basic/: command_line.h  common.h  scar_config.h.in  types.h
include/scar/io/: geomodel_builder_msh.h  geomodel_builder_pl.h  geomodel_builder_ts.h  geomodel_io.h
include/scar/remeshing/: geomodel_entity_remeshing.h  geomodel_vertex_shifter.h
include/scar/repair/: additional_rules.h  geomodel_correspondence_map.h  repairer.h  topology_recovery.h
include/scar/tools/: complexity_measures.h  convex_shape.h  distance.h  entity_analysis.h  geometry.h  projection.h  triangle_quality.h  utils.h
src/ringpcl/: CMakeLists.txt  correlation_map.cpp
src/scar/: CMakeLists.txt
src/scar/basic/: command_line.cpp  common.cpp
src/scar/io/: geomodel_builder_msh.cpp  geomodel_builder_pl.cpp  geomodel_builder_ts.cpp
src/scar/remeshing/: geomodel_entity_remeshing.cpp  geomodel_vertex_shifter.cpp
src/scar/repair/: geomodel_correspondence_map.cpp  repairer.cpp  topology_recovery.cpp
src/scar/tools/: complexity_measures.cpp  convex_shape.cpp  distance.cpp  geometry.cpp  projection.cpp  triangle_quality.cpp  utils.cpp
tests/data/: readme.md
